--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -2,13 +2,27 @@ html{
     top:0;
     left: 0;
     right: 0;
+    padding: 0;
+    margin: 0;
+   gap:0;
+    /* background-color: cornsilk; */
+    
+  
 
 }
 
 .Home{
+    
+    background-image: repeating-linear-gradient(45deg, hsla(64,83%,54%,0.05) 0px, hsla(64,83%,54%,0.05) 1px,transparent 1px, transparent 11px,hsla(64,83%,54%,0.05) 11px, hsla(64,83%,54%,0.05) 12px,transparent 12px, transparent 32px),repeating-linear-gradient(90deg, hsla(64,83%,54%,0.05) 0px, hsla(64,83%,54%,0.05) 1px,transparent 1px, transparent 11px,hsla(64,83%,54%,0.05) 11px, hsla(64,83%,54%,0.05) 12px,transparent 12px, transparent 32px),repeating-linear-gradient(0deg, hsla(64,83%,54%,0.05) 0px, hsla(64,83%,54%,0.05) 1px,transparent 1px, transparent 11px,hsla(64,83%,54%,0.05) 11px, hsla(64,83%,54%,0.05) 12px,transparent 12px, transparent 32px),repeating-linear-gradient(135deg, hsla(64,83%,54%,0.05) 0px, hsla(64,83%,54%,0.05) 1px,transparent 1px, transparent 11px,hsla(64,83%,54%,0.05) 11px, hsla(64,83%,54%,0.05) 12px,transparent 12px, transparent 32px),linear-gradient(90deg, rgb(41, 27, 158),rgb(249, 77, 212));
+    color: white;
+    border-radius: 10px;
+    
+    margin: 5px 0;
+    padding: 5px 0;
+ 
     height: 500px;
 
-    width: 100%;
+ 
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -21,25 +35,27 @@ html{
     justify-content: top;
     align-items: center;
 
+
 }
 
 .Home .p-name{
-    color:rgb(3, 10, 95);
+    /* color:rgb(3, 10, 95); */
     font-weight: 800;
 }
 
 .Home .p-job{
-    color: rgb(84, 66, 32);
+    /* color: rgb(84, 66, 32); */
 }
 
 .Home .p-welcome{
-    color: #330b02;
+   
+    /* color: #330b02; */
 }
 
 
 .Home .Home-Container{
     
-    height: 80%;
+    height: fit-content;
     width: 90%;
     overflow: hidden;
 
@@ -52,6 +68,7 @@ html{
 .Home .Home-Container img{
     height: 300px;
     border-radius: 50%;
+    margin: 8px 0px;
 }
 
 
@@ -114,9 +131,21 @@ html{
   }
   
 
-@media (max-width:700px) {
+@media (max-width:800px) {
+    header{
+       
+        background-image: none;
+    }
+    .Home{
+       
+        top: 0;
+    
+        /* left: 0; */
+     
+    }
 
     .Home .Home-Container{
+        
         flex-direction: column; height: 100%;}
 
     .Home{ height: 800px; }
@@ -127,3 +156,32 @@ html{
              height: 250px;
              width: 250px; }
 }
+
+
+
+
+
+
+
+
+
+.animated-element {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+  }
+  
+  .animated-element-right {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+  }
+  
+  @keyframes animate {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
