--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #333;
+    background-color: #1b0a6e;
     color: #fff;
     text-align: center;
     padding: 20px 0;
